  * Sven Luther
    - 2.4.27-3 powerpc kernel now produces only one kernel-image-2.4.27-powerpc
      package, so dropped the pmac/chrp/chrp-rs6k/prep handling from
      kernel/powerpc.sh.
    - Removed mkvmlinuz explicit install, as all kernel-images (2.4.27-3,
      2.6.8-11 and 2.6.10-3) now depend on mkvmlinuz.
  * Christian Perrier
    - Remove extra space in templates. Closes: #305775

 -- Sven Luther <luther@debian.org>  Sat, 26 Feb 2005 18:27:07 +0100

base-installer (1.16) experimental; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Colin Watson
    - Add G5 PowerMac7,3 tests based on /proc/cpuinfo provided by Shyamal
      Prasad.
    - Prefer SMP kernels on multi-processor powerpc systems.
    - Improve kernel selection for Transmeta Crusoe i386 systems.
  * Updated translations:
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Jordi Mallach
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Gallegan (gl.po) by Hctor Fenndez Lpez
    - Italian (it.po) by Davide Meloni
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Dutch (nl.po) by Bart Cornelis
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Dmitry Beloglazov

 -- Colin Watson <cjwatson@debian.org>  Sun, 30 Jan 2005 13:44:27 +0000

base-installer (1.15) experimental; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Colin Watson
    - Recognise POWER4+ and PPC970FX cpuinfo entries as power4 systems.
    - Only look at the first cpu line in cpuinfo on powerpc.
    - Add chrp_rs6k tests based on /proc/cpuinfo provided by Cajus
      Pollmeier.
    - Use backslash-continuations in tests to simplify future diffs.
    - Include "kernel-image-" stem in tests, to help with derivative
      distributions like Ubuntu that use a different stem.

 -- Colin Watson <cjwatson@debian.org>  Sun, 16 Jan 2005 15:41:53 +0000

base-installer (1.14) experimental; urgency=low
